kustomize/overlays/kind/argo-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argo-server
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: argo.garyhub
      http:
        paths:
          - backend:
              serviceName: argo-server
              servicePort: 2746
            path: /argo
          - backend:
              serviceName: argo-server
              servicePort: 2746
            path: /argo/(.*)
